--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -152,14 +152,14 @@
     align-items: center;
     text-align: center;
     font-size: 2rem;
-    color: #dc3538;
+    color: #0c0b0b;
     height: 40px;
     width: 40px;
     background-color: #fff;
     cursor: pointer;
     margin-top: 10px;
     text-align: center;
-    display: block;
+    
     line-height: 40px;
   }
 }
