--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,12 +1,17 @@
 @import '../../styles/contants.scss';
 
 .wrapper {
+
     overflow: hidden;
 
-
+    background-image: url("./anhnencv.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     .container {
         position: relative;
         z-index: 1;
+        height: calc(100vh - 10.1rem);
 
         .upperElements {
             @media (max-width: $sm) {
@@ -14,79 +19,102 @@
                 text-align: center;
                 gap: 2rem;
             }
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
 
-
-        .lowerElements {
-            @media (max-width: $sm), (max-width: $md) {
-                margin-top: 4rem;
-                gap: 2rem;
-                justify-content: center;
-            }
-            margin-top: 32rem;  
             display: flex;
+            // align-items: center;
+            flex-direction: column;
+            // justify-content: space-between;
             flex-wrap: wrap;
-            justify-content: space-between;
-            .experience {
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-                >:nth-child(2) {
-                    line-height: 25px;
+
+     
+            .socialLinks {
+                margin-top: 0px;
+
+                a {
+                    display: inline-block;
+                    height: 6rem;
+                    width: 6rem;
+                    position: relative;
+                    border-radius: 50%;
+                    margin-top: 20px;
+                    margin-right: 10px;
+
+                    span {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        color: black;
+                        background-color: rgb(255, 255, 255, 0.2);
+                        text-align: center;
+                        line-height: 40px;
+                        font-size: 20px;
+                        border-radius: 50%;
+                        transition: all .6s ease;
+                        .size {
+                           
+                            height: 6rem;
+                            width: 6rem;
+                            position: relative;
+                            border-radius: 50%;
+                          
+                           
+        
+                        }
+                        .fb:hover {
+                            background-color: #0f73ee;
+                            color: #ffffff;
+                            transition: all .6s ease;
+                        }
+                        .git:hover {
+                            background-color: #ff00;
+                            color: rgb(192, 104, 104);
+                            transition: all .6s ease;
+                        }
+                        
+                    }
                 }
             }
 
-            .certificate {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                img {
-                    margin-bottom: 1rem;
-                    width: 3.5rem;
-                }
-            }
+         
         }
+
+
+
 
         .person {
-            @media (max-width: $sm ), (max-width: $md) {
+
+            @media (max-width: $sm ),
+            (max-width: $md) {
                 position: relative;
                 left: 0;
+             
                 background-size: 20rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 background-position: bottom;
             }
+
             position: absolute;
-            bottom: -2rem;
+            // bottom: -2rem;
             margin: auto;
-            background-image: url("../splash.png");
+            background-image: url("./anhnencv");
             background-repeat: no-repeat;
-            background-size: 23rem;
+            // background-size: 100rem;
             left: 33%;
 
             img {
                 @media (max-width: $sm ) {
                     width: 23rem;
                 }
+
                 margin-bottom: -5px;
+
             }
         }
 
-        .email {
-            @media (max-width: $sm ) {
-                position: relative;
-                display: none;
-            }
-            position: absolute;
-            top: 50%;
-            left: 0;
-            color: orange;
-        }
+
     }
 }
