--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,8 @@
 @import './contants.scss';
 
 .bg-primary {
-  // background: #F8F7F1;
+  background: white;
+  
 }
 
 .innerWidth {
@@ -15,7 +16,7 @@
 
 .is-sticky {
 
-  z-index: 49;
+  z-index: 999;
   box-shadow: 0 2px 24px 0 rgb(0 0 0 / 15%);
   background-color: #ffffff !important;
   // animation: 500ms ease-in-out fadeInDown;
@@ -189,9 +190,11 @@
 
 .section-title h1::before {
   content: '';
-  left: 0;
+ 
+  left: 50%;
+  transform: translateX(-50%);
   height: 2px;
-  width: 100%;
+  width: 80%;
   right: 0;
   background: linear-gradient(90deg, rgba(131, 58, 180, 0.6442285532377013) 9%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 0.9047327549183736) 81%, rgba(252, 176, 69, 0.8375058641620711) 100%);
   ;
